fixed gap issue

--- a/src/containers/plp/styles.scss
+++ b/src/containers/plp/styles.scss
@@ -1262,18 +1262,20 @@ p.corporate-sub-heading {
 
 
 .slider-container {
+  width: 57%;
   max-width: 57%;
   margin: 0 auto;
 
   @media (max-width:992px) {
 
     max-width: 59%;
+    width: 59%;
     // padding-left: 20px;
   }
 
   @media (max-width:767px) {
-
     max-width: 100%;
+    width: 100%;
     padding-left: 20px;
   }
 
